--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body{
   font-family: 'Kanit', sans-serif;
+  background-color: #F1F1F1;
 }
 
 *{
@@ -151,11 +152,16 @@ button{
   background: rgb(255, 138, 0);
   background: linear-gradient(180deg, rgba(255, 138, 0, 1) 3%, rgba(237, 42, 48, 1) 45%, rgba(135, 24, 27, 1) 100%);
 }
+.background-footer{
+  background: rgb(255,222,89);
+background: linear-gradient(180deg, rgba(255,222,89,1) 0%, rgba(243,158,74,1) 37%, rgba(222,39,45,0.499124649859944) 100%);
+}
 
 .card-container {
   display: flex;
   justify-content: space-around;
   width: 100%;
+  background-color: transparent;
 }
 
 .card-item {
@@ -184,7 +190,7 @@ button{
     }
 
     .index-card-item {
-      flex: 0 0 calc(33.33% - 20px);
+      flex: 1 1 calc(25% - 20px); 
       margin-bottom: 20px;
       background-color: white;
       border: 1px solid #ddd;
@@ -199,8 +205,8 @@ button{
     }
 
     .index-card-item img {
-      width: 250px;
-      height: auto;
+      width: 200px;
+      height: 200px;
       max-width: 100%;
       border-radius: 5px;
       margin-bottom: 10px;
@@ -470,6 +476,7 @@ text-align-last: center;
   display: flex;
   flex-wrap: wrap;
 }
+
 
 .equal-height-cards .col-md-3 {
   display: flex;
