--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -1,6 +1,6 @@
-<div class="container-fluid" style="background-color: #929fba">
+<div class="container-fluid  background-footer" >
   <footer class="text-center text-lg-start text-white">
-    <div class="container p-4">
+    <div class="container p-4 " style="background-color: transparent;">
       <section class="">
         <div class="row">
           <!-- Grid column 1 -->
