--- a/views/jobgetall.ejs
+++ b/views/jobgetall.ejs
@@ -10,14 +10,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<body >
 
   <%- include('navbar') %>
-    <section style="background-color: #eeeeee; height: 100vh; ">
-      <div class="container py-5 h-100">
-        <h4><strong>งานของฉัน</strong></h4>
-        <div class="container">
-          <div class="row equal-height-cards">
+      <div class="container-fluid py-5" style="background-color: #F1F1F1;">
+        <div class="container" style="background-color: #F1F1F1;">
+          <h4 class="d-flex justify-content-start"><strong>งานของฉัน</strong></h4>
+          <div class="row equal-height-cards " style="justify-content: start;">
             <% if(job.length> 0) { %>
               <% job.forEach((job)=> {%>
                 <% if( job !=undefined) { %>
@@ -57,9 +56,6 @@
                       </div>
                     </div>
                   </div>
-                  
-                  
-                  
 
                   <% } else { %>
                     <p> something wrong</p>
@@ -72,7 +68,6 @@
           </div>
         </div>
       </div>
-    </section>
 
 
 </body>
