--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -27,8 +27,6 @@
 <body>
 
   <%- include('navbar') %>
-
-
     <% if(locals.errors){ %>
       <% Object.values(errors).forEach(function(error){%>
         <script type="text/javascript">
@@ -46,14 +44,17 @@
               })
             </script>
             <%}%>
+            <div class="container col-lg-6">
+            <div class="card" >
+              <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top" alt="Sunset Over the Sea"/>
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
 
-
-              <section style="background-color: #eeeeee;">
+                <p class="d-flex justify-content-center"><b>Register</b></p>
                 <form action="/user/registeruser" method="post" enctype="multipart/form-data">
-
-                  <div class="container py-5 h-100">
-                    <p class="label-profile12"><b>Register</b></p>
-                    <div class="row d-flex justify-content-center align-items-center h-100 ">
                       <div class="col col-lg-6 mb-4 mb-lg-0 ">
                         <div class="card mb-3" style="border-radius: .5rem;">
                           <div class="row g-0">
@@ -74,32 +75,20 @@
                                 <h6>Information</h6>
                                 <hr class="mt-0 mb-4">
                                 <div class="row pt-1">
-
-                                  <h6>Username</h6>
-                                  <input type="text" name="username" class="form-control ms-2" id="username"required />
-
+                                  <input type="text" name="username" class="form-control ms-2" id="username" placeholder="username" />
                                 </div>
-
-
                                 <div class="row pt-1">
-
-                                  <h6>Email</h6>
-                                  <input type="text" name="email" class="form-control ms-2" id="email"required />
-
+                                  <input type="text" name="email" class="form-control ms-2" id="email" placeholder="email" required />
                                 </div>
 
                                 <div class="row pt-1">
 
-                                  <h6>Password</h6>
                                   <input type="password" name="password" id="password" class="form-control ms-2  "
-                                    placeholder="New Password" onkeyup='passConfirm();'required />
+                                    placeholder="New Password" onkeyup='passConfirm();' required />
                                   <small id="message" style="color:red"> </small>
 
                                 </div>
                                 <div class="row pt-1">
-
-                                  <h6>Confirm Password</h6>
-
                                   <input type="password" name="confirm_password" id="confirmpassword"
                                     class="form-control ms-2" value="" placeholder="Confirm Password"
                                     onkeyup='passConfirm();' required/>
@@ -111,20 +100,10 @@
                           </div>
                         </div>
                       </div>
-                    </div>
-                  </div>
-
 
                 </form>
 
-
-
-
-
-
-
-
-
+</body>
                 <script>
                   function displayImage(event) {
                     const imagePreview = document.getElementById('imagePreview');
@@ -142,8 +121,6 @@
                       imagePreview.src = '/image/default.png'; // Set default image
                     }
                   }
-
                 </script>
-</body>
 
 </html>
