--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
 <body>
   <%- include('navbar') %>
-    <section class="sectionforlogin">
+    <!-- <section class="sectionforlogin">
       <div class="form-box">
         <div class="form-value">
           <form id="login-form" action='/api/login' method="post">
@@ -48,7 +48,52 @@
           </form>
         </div>
       </div>
+    </section> -->
+    <section class="vh-100">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-6 text-black">
+    
+            <div class="px-5 ms-xl-4">
+              <img src="image/FINDJOB-Photoroom.png-Photoroom.png" width="25%" alt="Description of the image">
+            </div>
+    
+            <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+    
+              <form style="width: 30rem;"id="login-form" action='/api/login' method="post">
+    
+                <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">ลงชื่อเข้าใช้งาน</h3>
+    
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="text" name="email" id="email"  class="form-control form-control-lg" placeholder="Email address" required/>
+                </div>
+    
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="password" required/>
+                </div>
+    
+                <div class="pt-1 mb-4">
+                  <button class="btn  w-100" style="color: #eeeeee ; background-color: #ED2A30;" id="login-button" type="submit">เข้าสู่ระบบ</button>
+                </div>
+    
+                <p class="small mb-1 text-end" ><a class="text-muted" href="/forget" style="color: #ED2A30;" >ลืมรหัสผ่าน</a></p>
+                <p>ยังไม่ได้เป็นสมาชิก FINDJOB ใช่หรือไม่ ?<a href="/registeruser" class="link-info"> สมัครสมาชิกผู้ใช้งาน</a><br><a href="/registercompany" class="link-info">หรือ สมัครสมาชิกบริษัท</a></p>
+    
+              </form>
+    
+            </div>
+    
+          </div>
+          <div class="col-sm-6 px-0 d-none d-sm-block">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img3.webp"
+              alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
+          </div>
+        </div>
+      </div>
     </section>
+
+
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const loginForm = document.getElementById("login-form");
