--- a/views/profilecompany.ejs
+++ b/views/profilecompany.ejs
@@ -11,202 +11,117 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
-  <style>.gradient-custom {
-    /* fallback for old browsers */
-    background: #f6d365;
-    
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1));
-    
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1))
-    
+  <style>
+    .profile-img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 10px;
     }
-    .colorless-input {
-background-color: transparent;
-border: none;
-}
-.border-custom {
-margin-top: 9px;
-margin-bottom: 9px;
-text-align-last: center;
-padding-top: 2px;
-padding-bottom: 2px;
-border: 2px solid rgb(0, 0, 0); /* Change the border style and color as needed */
-border-radius: 5px; /* Optional: Add rounded corners */
-}
-.label-profile{
-width: 117px;
-padding-top: 7px;
-height: 35px;
-flex-shrink: 0;
-background: #f6d365;
-text-align-last: center;
-}
-.input-mid{
-padding-left:35px ;
-margin-bottom: 10px;
-}
-.form-control-input {
 
-padding: 10px; /* Add some padding */
-margin: 5px 0; /* Add margin at the top and bottom */
-box-sizing: border-box; /* Include padding and border in the element's total width and height */
-border: 1px solid #981818; /* Add a border */
-border-radius: 4px; /* Add rounded corners */
-}
+    .upload-btn {
+      position: absolute;
+      margin-left: 50%;
+      padding-top: 20%;
+      top: 10px;
+      right: 10px;
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      border: none;
+      border-radius: 50%;
+      padding: 10px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-/* Style for when the input is focused */
-.form-control-input {
-border-color: #007BFF; /* Change border color when focused */
-}
-
-</style>
+    .form-control-input {
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
 
 <body>
-  
-   <%- include('navbar') %> 
 
-    
+  <%- include('navbar') %>
+    <section style="background-color:transparent; height: 100%;">
+      <form action="/company/updateprofile/<%= company.id_company %>" method="post" enctype="multipart/form-data">
+        <div class="container d-flex justify-content-center py-5 h-100"
+          style="gap: 1rem;background-color: transparent; ">
+          <div class="card text-center d-flex justify-content-center align-items-center p-4 text-white background "
+            style="width: 300px;">
+            <label for="image" class="upload-btn"><i class="fas fa-camera fa-xs"></i></label>
+            <img id="imagePreview" src="/image/<%= company.image %>" alt="Avatar" class="img-fluid profile-img "
+              style="background-color: #eeeeee;" />
+            <input type="file" id="image" name="image" accept="image/*" onchange="displayImage(event)" class="d-none">
+            <input type="text" id="username" name="username" class="form-control mb-2 mt-5"
+              value="<%= company.username %>" />
+            <input type="namecontact_company" id="namecontact_company" name="namecontact_company"
+              class="mt-2 form-control" value="<%= company.namecontact_company %>" />
 
-
-        <section style="background-color: #eeeeee;  height: 100vh;">
-          <form action="/company/updateprofile/<%= company.id_company %>" method="post" enctype="multipart/form-data">
-          
-              <div class="container py-5 h-100">
-                <p class="label-profile"><b>Profile</b></p>      
-          <div class="row">
-            <div class="col-lg-4">
-              <div class="card mb-4">
-                <div class="card-body text-center gradient-custom">
-                  <img src="/image/<%= company.image %>" alt="Avatar" class="img-fluid my-5 rounded-circle" style="width: 150px; height: 130px;" />
-
-                  <input type="file" id="image" name="image" accept="image/*" onchange="displayImage(event)" class="input-mid">
-                 
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <p class="mb-0">Username</p>
-                    </div>
-                    <div class="col-sm-9">
-                      <input type="text" id="username" name="username" class="form-control-input"  value="<%= company.username %>" />
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <p class="mb-0">NameContact</p>
-                    </div>
-                    <div class="col-sm-9">
-                      <input type="namecontact_company" id="namecontact_company" name="namecontact_company" class="form-control-input"  value="<%= company.namecontact_company %>" />
-                    </div>
-                  </div>
-                  
-                </div>
+          </div>
+          <div class="card p-4 " style="width: 500px;">
+            <p class="d-flex justify-content-center"><b>ข้อมูลผู้ใช้</b></p>
+            <hr class="mt-0 mb-4">
+            <input type="text" id="name_company" name="name_company" class="mt-2 form-control"
+              value="<%= company.name_company %>" />
+            <input type="email" id="email" name="email" class="mt-2 form-control" value="<%= company.email %>" />
+            <input type="tell_company" id="tell_company" name="tell_company" class="mt-2 form-control"
+              value="<%= company.tell_company %>" />
+            <div class="row">
+              <div class="col-md-6">
+                <input type="text" id="district" name="district_company" class="form-control mt-2"
+                  value="<%= company.district_company %>" placeholder="District" />
               </div>
-              
-            </div>
-            <div class="col-lg-8">
-              <div class="card mb-4">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-sm-2">
-                      <p class="mb-0">NameCompany</p>
-                    </div>
-                    <div class="col-sm-3">
-                      <input type="text" id="name_company" name="name_company" class="form-control-input"  value="<%= company.name_company %>" />
-                    </div>
-                    <div class="col-sm-3 text-center">
-                      <p class="mb-0">DistrictCompany</p>
-                    </div>
-                    <div class="col-sm-3">
-                      <input type="text" id="district" name="district_company" class="form-control-input"  value="<%= company.district_company %>" />
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm-2">
-                      <p class="mb-0">Email</p>
-                    </div>
-                    <div class="col-sm-3">
-                      <input type="email" id="email" name="email" class="form-control-input"  value="<%= company.email %>" />
-                    </div>
-                  
-                  <div class="col-sm-3 text-center">
-                    <p class="mb-0">AmphoeCompany</p>
-                  </div>
-                  <div class="col-sm-3">
-                    <input type="text" id="amphoe" name="amphoe" class="form-control-input"  value="<%= company.amphoe %>" />
-                  </div>
-                </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm-2">
-                      <p class="mb-0">Phone</p>
-                    </div>
-                    <div class="col-sm-3">
-                      <input type="tell_company" id="tell_company" name="tell_company" class="form-control-input"  value="<%= company.tell_company %>" />
-                    </div>
-                    <div class="col-sm-3 text-center">
-                      <p class="mb-0">ProvinceCompany</p>
-                    </div>
-                    <div class="col-sm-3">
-                      <input type="text" id="province" name="province_company" class="form-control-input"  value="<%= company.province_company %>" />
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm-2">
-                      <p class="mb-0">County</p>
-                    </div>
-                    <div class="col-sm-4">
-                      <input type="county_company" id="county_company" name="county_company" class="form-control-input"  value="<%= company.county_company %>" />
-                    </div>
-                    <div class="col-sm-2">
-                      <p class="mb-o">ZipCompany</p>
-                    </div>
-                    <div class="col-sm-3">
-                      <input type="text" id="zipcode" name="zipcode_company" class="form-control-input"  value="<%= company.zipcode_company %>" />
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm-2">
-                      <p class="mb-0">Address</p>
-                    </div>
-                    <div class="col-sm-9">
-                      <textarea type="address_company" id="address_company" name="address_company" class="form-control-input w-100 h-100"><%= company.address_company %></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-colorless ">
-                      <i class="far fa-edit"></i> Submit
-                    </button>
-                  </div>
-                </div>
+              <div class="col-md-6">
+                <input type="text" id="amphoe" name="amphoe" class="form-control mt-2" value="<%= company.amphoe %>"
+                  placeholder="Amphoe" />
               </div>
-              
             </div>
+            <div class="row">
+              <div class="col-md-6">
+                <input type="text" id="province" name="province_company" class="form-control mt-2"
+                  value="<%= company.province_company %>" placeholder="Province" />
+              </div>
+              <div class="col-md-6">
+                <input type="text" id="zipcode" name="zipcode_company" class="form-control mt-2"
+                  value="<%= company.zipcode_company %>" placeholder="Zipcode" />
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <input type="text" id="county_company" name="county_company" class="form-control mt-2"
+                  value="<%= company.county_company %>" placeholder="County" />
+              </div>
+              <div class="col-md-6">
+                <input id="address_company" name="address_company" class="form-control mt-2"
+                  placeholder="Address" value="<%= company.address_company %>"></input>
+              </div>
+            </div>
+
+            <button type="submit" class="btn w-100 mt-4" style="color: #eeeeee ; background-color: #ED2A30;">ยืนยัน</button>
           </div>
         </div>
-          </form>
-      </section>
-            
-             
+      </form>
+    </section>
+    <%- include('Footer') %>
     <script type="text/javascript"
-    src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/JQL.min.js"></script>
-  
-  <script type="text/javascript"
-    src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/typeahead.bundle.js"></script>
-  
-  <link rel="stylesheet"
-    href="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.css">
-  
-  <script type="text/javascript"
-    src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.js"></script>
+      src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/JQL.min.js"></script>
+
+    <script type="text/javascript"
+      src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dependencies/typeahead.bundle.js"></script>
+
+    <link rel="stylesheet"
+      href="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.css">
+
+    <script type="text/javascript"
+      src="https://earthchie.github.io/jquery.Thailand.js/jquery.Thailand.js/dist/jquery.Thailand.min.js"></script>
 
 
     <script>
-
-     $.Thailand({
+      $.Thailand({
         $district: $('#district'),
         $amphoe: $('#amphoe'),
         $province: $('#province'),
@@ -214,33 +129,12 @@ border-color: #007BFF; /* Change border color when focused */
       });
 
     </script>
-
-             
-                <script>
-                  function displayImage(event) {
-                    const imagePreview = document.getElementById('imagePreview');
-                    const file = event.target.files[0];
-      
-                    if (file) {
-                      const reader = new FileReader();
-      
-                      reader.onload = function (e) {
-                        imagePreview.src = e.target.result;
-                      }
-      
-                      reader.readAsDataURL(file);
-                    } else {
-                      if(user){
-                      imagePreview.src = '/image/<%= company.image %>'; // Set default image
-                      } 
-                     
-                    }
-                  }
-      
-                </script>
-                  
-                  
-     
+    <script>
+      function displayImage(event) {
+        const image = document.getElementById('imagePreview');
+        image.src = URL.createObjectURL(event.target.files[0]);
+      }
+    </script>
 
 </body>
 
